# uniquode2

./: .env-template  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
app/: manage.py
app/cachedmodel/: README.md  apps.py  manager.py  models.py
app/cachedmodel/migrations/: 0001_initial.py
app/cachedmodel/utils/: modelutils.py
app/categories/: README.md  admin.py  fields.py  managers.py  models.py
app/categories/migrations/: 0001_initial.py  0002_initial.py
app/components/: admin.py  auth.py  models.py  site_info.py  view_mixins.py
app/conf/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
app/core/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  settings.py  sitetrees.py  urls.py  views.py
app/core/cachedmodel/: README.md  apps.py  manager.py  models.py  signals.py
app/core/components/: auth.py  db_router.py  models.py
app/core/migrations/: 0001_initial.py  0002_unique_icon_name.py  0003_category_to_icon_name.py  0004_group_permissions.py  0004_users_groups.py  0005_group_members.py  0005_sites.py  0006_group_permissions.py
app/core/templates/: layout.html
app/core/templatetags/: md.py
app/media/: admin.py  apps.py  models.py  urls.py  views.py
app/scripts/: add_auth_migrations.py  create_database.py  createdb.py  icons.py
app/templates/: 404.html  500.html  base.html  layout.html
fixtures/initial/: group_permissions.csv  groups.csv  icon_tags.json  user_groups.csv  users.csv
tests/: test_basic.py  test_core_models.py
tests/core/: test_basic.py  test_core_models.py
(+25 files in other folders)
